css/style.css
@charset "utf-8";
@font-face {
    font-family: 'JosefinSans';
    src: url(font/JosefinSans-Italic-VariableFont_wght.ttf);
}

html {
    background-image: url("../assets/img/Background_home_page.jpg");
}

body {
    display: flex;
    justify-content: space-between;
    flex-direction: column;
    font-family: 'JosefinSans';
    width: 100%;
    min-height: 100vh;
    margin: 0;
}

header {
    font-size: larger;
    font-weight: bold;
    background-color: #FFFFFD;
    border-bottom: solid red;
    box-shadow: 0px 1px 5px;
    position: sticky;
    top: -35px;
    width: 100%;
    max-height: 100px;
    min-height: 5px;
}

.navbar {
    overflow: hidden;
    display: flex;
    justify-content: center;
}

.navbar a {
    color: red;
    margin-top: 15px;    
    padding-left: 30px;
    text-decoration: none;
}

.navbar a:hover {
    color: rgb(128, 0, 0);
}

.navbar a.active {
    color: rgb(128, 0, 0);
}

.navbar .icon {
    display: none;
}


@media screen and (max-width: 720px) {
    .navbar {
        display: flex;
        justify-content: right;
        margin-right: 30px;
    }

    .navbar a:not(:last-child) {
        display: none;
    }

    .navbar a.icon {
        float: right;
        display: block;
    }

    main {
        display: flex;
        justify-content: center;
        flex-direction: column;
        align-content: center;
        text-align: center;
        width: 100%;
        height: auto;
        margin: 0;
    }

    hr {
        min-width: 100%;
        margin: 0;
        float: none;
    }

    li h3 {
        padding-right: 30px;
    }
}

@media screen and (max-width: 720px) {
    .navbar.responsive {
        position: relative;
    }

    .navbar.responsive a .icon {
        position: absolute;
        right: 0;
        top: 0;
    }

    .navbar.responsive a {
        float: none;
        display: block;
        text-align: left;
    }
}

main {
    display: block;
    justify-content: start;
    align-content: start;
    width: 77%;
    margin-left: 3rem;
    margin-bottom: 2rem;
    padding-top: 60px;
}

li p {
    width: 80%;
    font-size: 14px;
}

ul {
    list-style: square;
}

#HomeTitle {
    color: red;
    text-align: center;
    padding: 50px 0px 20px 0px;
}

.landing-picture {
    display: flex;
    justify-content: center;
    align-items: center;
}

.landing-picture img {
    border-radius: 5%;
}

.store-button {
    display: flex;
    justify-content: center;
    align-items: center;
    margin: 20px 0px 50px 0px;
}

img {
    display: block;
    max-width: 100%;
    height: auto;
}

.container {
    display: flex;
    flex-direction: column;
    align-items: center;
}

.card {
    text-align: center;
    box-shadow: 0 4px 8px 0;
    width: 30%;
    margin-bottom: 20px;
}

.card img {
    width: 100%;
}

.card a {
    color: red;
    text-decoration: none;
}

.card a:hover {
    color: rgb(128, 0, 0);
    text-decoration: none;
}

footer {
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    background-color: #FFFFFD;
    border-top: solid blue;
    position: sticky;
    bottom: -65px;
    width: 100%;
    max-height: 200px;
    min-height: 5px;
}

footer a {
    color: red;
    text-decoration: none;
}

footer a:hover {
    color: rgb(128, 0, 0);
    text-decoration: none;
}

